<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_new_project"
        android:title="@string/new_project"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_open_project"
        android:title="@string/open_project"
        android:icon="@android:drawable/ic_menu_agenda"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_save"
        android:title="@string/save_file"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_compile"
        android:title="@string/compile_code"
        android:icon="@android:drawable/ic_media_play"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_settings"
        android:title="Settings"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="never" />
</menu>